Bug 1307350: Compensate for repeating timers that have not been appropriately cancelled. r=froydnj

MozReview-Commit-ID: 20VpLbgSjh4